# cons-ext

./: .gitignore  CHANGELOG.md  README.md  consmodule.c  consmodule.h  fastcons.pyi  pyproject.toml  setup.py
.github/workflows/: CI.yml
tests/: test_assoc.py  test_cons.py  test_nil.py  test_properties.py
