[project]
name = "fastcons"
version = "0.4.1"
authors = [
    {name = "Joshua Munn", email = "public@elysee-munn.family"},
]
requires-python = ">=3.11, <3.13"
description = "A cons extension module for Python"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["measure", "tests"]

[project.optional-dependencies]
test = ["pytest == 7.2.2"]
dev = [
    "black ~= 23.1.0",
    "ruff ~= 0.0.256",
]
build = ["build == 0.10.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "ARG", # unused arguments
  "PT",  # pytest style
  "T10", # flake8-debugger
  "C4",  # flake8-comprehensions
]
